/**
 * Name: Tianqi Yang
 * Course: CS-665 Software Designs & Patterns
 * Date: 12/10/2023
 * File Name: Callback.java
 * Description: The base Callback class for the callback pattern to execute.
 */

package edu.bu.met.cs665.callback;

public interface Callback {
    void call();
}
