/**
 * Name: Tianqi Yang
 * Course: CS-665 Software Designs & Patterns
 * Date: 12/10/2023
 * File Name: PrecipitationObserver.java
 * Description: The PrecipitationObserver class receives the precipitation information from the parsed JSON.
 */

package edu.bu.met.cs665.observers;

import edu.bu.met.cs665.dataObj.WeatherData;
import edu.bu.met.cs665.helpers.WeatherInfoConfig;

public class PrecipitationObserver implements WeatherObserver{
    @Override
    public void update(WeatherData data, WeatherInfoConfig config) {
        /**
         * The update method for the observer pattern.
         *
         * @param data The parsed JSON data.
         * @param config The configured unit that the user chose for displaying precipitation (mm/inch)
         */
        if(config.getPrecipUnit().equals("inch")) {
            //Necessary as "mms" does not make sense, hence the conditional print values.
            System.out.println("Precipitation: " + data.getCurrent().getPrecipitation() +
                    " " + config.getPrecipUnit() + "s");
        } else {
            System.out.println("Precipitation: " + data.getCurrent().getPrecipitation() +
                    " " + config.getPrecipUnit());
        }
    }
}
